--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -961,8 +961,72 @@
                     <view key="view" contentMode="scaleToFill" id="WSf-Ud-IIQ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1mY-HV-jMk">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="vv7-dp-hMP">
+                                    <rect key="frame" x="0.0" y="72" width="600" height="186"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Id-YE-1pd">
+                                            <rect key="frame" x="147" y="40" width="306" height="36"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <state key="normal" title="确定发送短信" backgroundImage="login_bt_login"/>
+                                            <connections>
+                                                <action selector="sendMessage:" destination="SLa-uD-T1B" eventType="touchUpInside" id="EfU-pG-gPR"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="8Id-YE-1pd" firstAttribute="centerX" secondItem="vv7-dp-hMP" secondAttribute="centerX" id="bp7-iC-x1e"/>
+                                        <constraint firstItem="8Id-YE-1pd" firstAttribute="top" secondItem="vv7-dp-hMP" secondAttribute="top" constant="40" id="vIB-Yb-pn7"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="PiJ-Ok-gUQ" detailTextLabel="qkC-5L-RLo" style="IBUITableViewCellStyleValue1" id="uTv-6c-cGd">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uTv-6c-cGd" id="Kh0-qy-RYS">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PiJ-Ok-gUQ">
+                                                    <rect key="frame" x="15" y="12" width="32" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qkC-5L-RLo">
+                                                    <rect key="frame" x="543" y="12" width="42" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="SLa-uD-T1B" id="vj4-Is-thc"/>
+                                    <outlet property="delegate" destination="SLa-uD-T1B" id="h0b-WS-pz0"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1mY-HV-jMk" secondAttribute="trailing" id="G7c-xm-gQs"/>
+                            <constraint firstItem="1mY-HV-jMk" firstAttribute="top" secondItem="6fr-NN-U1D" secondAttribute="bottom" id="dZl-bN-yhc"/>
+                            <constraint firstItem="1mY-HV-jMk" firstAttribute="leading" secondItem="WSf-Ud-IIQ" secondAttribute="leading" id="idL-PW-dAE"/>
+                            <constraint firstItem="nd4-lF-qtH" firstAttribute="top" secondItem="1mY-HV-jMk" secondAttribute="bottom" id="wi1-lK-Xfh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="1mY-HV-jMk" id="6vO-UO-Bdn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Fd-cz-shc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
