--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -376,6 +376,99 @@
             </objects>
             <point key="canvasLocation" x="1191" y="410"/>
         </scene>
+        <!--Total Unread View Controller-->
+        <scene sceneID="Re7-mC-emx">
+            <objects>
+                <viewController storyboardIdentifier="ZXTotalUnreadViewController" id="XoB-4s-bHT" customClass="ZXTotalUnreadViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mum-Vx-WuQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="eAP-jO-Zlj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Yyh-I6-Jeq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hu0-iF-gki">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="HUv-JT-bFm">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lu7-gd-Dqn">
+                                            <rect key="frame" x="527" y="15" width="58" height="25"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <state key="normal" title="发短信" backgroundImage="announcement_bt_sendmessage"/>
+                                            <connections>
+                                                <action selector="sendMessageAction:" destination="XoB-4s-bHT" eventType="touchUpInside" id="OrR-st-qng"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4g-OK-rNs">
+                                            <rect key="frame" x="15" y="19" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.97254901960784312" green="0.34509803921568627" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.99607843137254903" green="0.95294117647058818" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="Lu7-gd-Dqn" firstAttribute="centerY" secondItem="z4g-OK-rNs" secondAttribute="centerY" id="5Yw-L8-W9v"/>
+                                        <constraint firstAttribute="trailing" secondItem="Lu7-gd-Dqn" secondAttribute="trailing" constant="15" id="Bpb-tU-x33"/>
+                                        <constraint firstAttribute="bottom" secondItem="Lu7-gd-Dqn" secondAttribute="bottom" constant="15" id="OJr-9V-qEr"/>
+                                        <constraint firstItem="Lu7-gd-Dqn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="z4g-OK-rNs" secondAttribute="trailing" constant="35" id="lpT-s2-Bfe"/>
+                                        <constraint firstItem="z4g-OK-rNs" firstAttribute="leading" secondItem="HUv-JT-bFm" secondAttribute="leading" constant="15" id="tcI-9m-psa"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="Xz3-ax-6Wv" detailTextLabel="uax-fU-hUC" style="IBUITableViewCellStyleValue1" id="X68-Od-qqS">
+                                        <rect key="frame" x="0.0" y="83" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X68-Od-qqS" id="udb-nT-Axr">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Xz3-ax-6Wv">
+                                                    <rect key="frame" x="15" y="12" width="32" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uax-fU-hUC">
+                                                    <rect key="frame" x="543" y="12" width="42" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="XoB-4s-bHT" id="sgZ-fN-704"/>
+                                    <outlet property="delegate" destination="XoB-4s-bHT" id="Fub-Fq-6B0"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hu0-iF-gki" firstAttribute="leading" secondItem="Yyh-I6-Jeq" secondAttribute="leading" id="DBQ-M1-gLA"/>
+                            <constraint firstAttribute="trailing" secondItem="Hu0-iF-gki" secondAttribute="trailing" id="Fk3-pJ-FSo"/>
+                            <constraint firstItem="Hu0-iF-gki" firstAttribute="top" secondItem="mum-Vx-WuQ" secondAttribute="bottom" id="nXn-P4-2q9"/>
+                            <constraint firstItem="eAP-jO-Zlj" firstAttribute="top" secondItem="Hu0-iF-gki" secondAttribute="bottom" id="v7t-w7-UnE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tablView" destination="Hu0-iF-gki" id="uzC-4g-MpP"/>
+                        <outlet property="unreadLabel" destination="z4g-OK-rNs" id="dsp-Ia-3wQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ewR-d7-0J9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="555" y="1066"/>
+        </scene>
         <!--Announcement Unread View Controller-->
         <scene sceneID="rpD-GI-ahb">
             <objects>
@@ -1008,6 +1101,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -1246,6 +1340,7 @@
     </scenes>
     <resources>
         <image name="announcement_bt_back" width="25" height="25"/>
+        <image name="announcement_bt_sendmessage" width="58" height="25"/>
         <image name="announcement_ic_allreading" width="60" height="60"/>
         <image name="announcement_ic_number" width="16" height="16"/>
         <image name="announcement_ic_time" width="12" height="12"/>
