--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -469,6 +469,96 @@
             </objects>
             <point key="canvasLocation" x="555" y="1066"/>
         </scene>
+        <!--Unread Teacher View Controller-->
+        <scene sceneID="one-fe-toJ">
+            <objects>
+                <viewController storyboardIdentifier="ZXUnreadTeacherViewController" id="EK3-di-ouS" customClass="ZXUnreadTeacherViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PV3-fC-9pO"/>
+                        <viewControllerLayoutGuide type="bottom" id="tZ1-YH-fs3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AmK-R3-yCI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xRx-NO-w0y">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Fl5-mI-BgV" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fl5-mI-BgV" id="jQx-BL-VGT">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_female" translatesAutoresizingMaskIntoConstraints="NO" id="TgS-Ft-PyW">
+                                                    <rect key="frame" x="15" y="15" width="16" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="18" id="9iL-Z5-AOh"/>
+                                                        <constraint firstAttribute="width" constant="16" id="EJQ-uA-LPM"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uzd-Mv-w3D">
+                                                    <rect key="frame" x="46" y="15" width="262" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="ZZ2-5S-daS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sc0-4x-1Lk">
+                                                    <rect key="frame" x="323" y="15" width="262" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="wgZ-QF-qWH"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="uzd-Mv-w3D" firstAttribute="leading" secondItem="TgS-Ft-PyW" secondAttribute="trailing" constant="15" id="64W-Re-jjd"/>
+                                                <constraint firstItem="Sc0-4x-1Lk" firstAttribute="leading" secondItem="uzd-Mv-w3D" secondAttribute="trailing" constant="15" id="Dsx-qi-2P7"/>
+                                                <constraint firstAttribute="trailing" secondItem="Sc0-4x-1Lk" secondAttribute="trailing" constant="15" id="c8g-pe-4yp"/>
+                                                <constraint firstItem="TgS-Ft-PyW" firstAttribute="top" secondItem="jQx-BL-VGT" secondAttribute="top" constant="15" id="dHC-Tq-Vga"/>
+                                                <constraint firstItem="Sc0-4x-1Lk" firstAttribute="top" secondItem="jQx-BL-VGT" secondAttribute="top" constant="15" id="dVy-Q3-EKZ"/>
+                                                <constraint firstItem="uzd-Mv-w3D" firstAttribute="top" secondItem="jQx-BL-VGT" secondAttribute="topMargin" constant="7" id="iVH-XH-uSm"/>
+                                                <constraint firstItem="TgS-Ft-PyW" firstAttribute="leading" secondItem="jQx-BL-VGT" secondAttribute="leading" constant="15" id="jVg-fg-BuV"/>
+                                                <constraint firstItem="Sc0-4x-1Lk" firstAttribute="width" secondItem="uzd-Mv-w3D" secondAttribute="width" id="uqU-ML-Dad"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="hasNewLabel" destination="Sc0-4x-1Lk" id="QHZ-L5-ZxC"/>
+                                            <outlet property="logoImage" destination="TgS-Ft-PyW" id="1de-Qw-thN"/>
+                                            <outlet property="titleLabel" destination="uzd-Mv-w3D" id="xyh-hv-l5x"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="EK3-di-ouS" id="lWd-uo-ev0"/>
+                                    <outlet property="delegate" destination="EK3-di-ouS" id="B6P-dE-6Bh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xRx-NO-w0y" firstAttribute="leading" secondItem="AmK-R3-yCI" secondAttribute="leading" id="57c-IY-0KL"/>
+                            <constraint firstAttribute="trailing" secondItem="xRx-NO-w0y" secondAttribute="trailing" id="OXc-ZI-Yjy"/>
+                            <constraint firstItem="tZ1-YH-fs3" firstAttribute="top" secondItem="xRx-NO-w0y" secondAttribute="bottom" id="VLO-kI-k2v"/>
+                            <constraint firstItem="xRx-NO-w0y" firstAttribute="top" secondItem="PV3-fC-9pO" secondAttribute="bottom" id="l70-h1-jqU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="xRx-NO-w0y" id="XDm-8x-sVb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fop-6d-4Uo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="555" y="1720"/>
+        </scene>
         <!--Announcement Unread View Controller-->
         <scene sceneID="rpD-GI-ahb">
             <objects>
@@ -1336,6 +1426,96 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2535" y="1073"/>
+        </scene>
+        <!--Unread Parent View Controller-->
+        <scene sceneID="UKD-Y5-5yc">
+            <objects>
+                <viewController storyboardIdentifier="ZXUnreadParentViewController" id="c54-Bq-fbM" customClass="ZXUnreadParentViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="57B-bL-pwE"/>
+                        <viewControllerLayoutGuide type="bottom" id="JHr-GW-GpV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dYg-O2-fd1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4T4-Ym-nDa">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="QFp-sp-XTp" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QFp-sp-XTp" id="oEz-nd-0PT">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_female" translatesAutoresizingMaskIntoConstraints="NO" id="a8J-8x-O6o">
+                                                    <rect key="frame" x="15" y="15" width="16" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="16" id="C72-kt-iAB"/>
+                                                        <constraint firstAttribute="height" constant="18" id="eAZ-5b-FEi"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vh5-UP-5J4">
+                                                    <rect key="frame" x="46" y="15" width="262" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="sTI-D6-3W6"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIA-7s-k8w">
+                                                    <rect key="frame" x="323" y="15" width="262" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="l0N-GO-Hae"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="Vh5-UP-5J4" firstAttribute="leading" secondItem="a8J-8x-O6o" secondAttribute="trailing" constant="15" id="5Ur-St-gBJ"/>
+                                                <constraint firstItem="Vh5-UP-5J4" firstAttribute="top" secondItem="oEz-nd-0PT" secondAttribute="topMargin" constant="7" id="8ew-i5-dpu"/>
+                                                <constraint firstItem="EIA-7s-k8w" firstAttribute="top" secondItem="oEz-nd-0PT" secondAttribute="top" constant="15" id="9hB-V8-0YJ"/>
+                                                <constraint firstItem="EIA-7s-k8w" firstAttribute="leading" secondItem="Vh5-UP-5J4" secondAttribute="trailing" constant="15" id="CaW-NX-Tia"/>
+                                                <constraint firstItem="EIA-7s-k8w" firstAttribute="width" secondItem="Vh5-UP-5J4" secondAttribute="width" id="Vtz-qa-a0f"/>
+                                                <constraint firstItem="a8J-8x-O6o" firstAttribute="leading" secondItem="oEz-nd-0PT" secondAttribute="leading" constant="15" id="ZnC-Es-1N3"/>
+                                                <constraint firstItem="a8J-8x-O6o" firstAttribute="top" secondItem="oEz-nd-0PT" secondAttribute="top" constant="15" id="joG-Zg-TMg"/>
+                                                <constraint firstAttribute="trailing" secondItem="EIA-7s-k8w" secondAttribute="trailing" constant="15" id="yOm-Iz-Ktm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="hasNewLabel" destination="EIA-7s-k8w" id="3bK-LQ-z6j"/>
+                                            <outlet property="logoImage" destination="a8J-8x-O6o" id="tjs-yx-lfd"/>
+                                            <outlet property="titleLabel" destination="Vh5-UP-5J4" id="QTk-QZ-afB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="c54-Bq-fbM" id="fBR-1k-rQ1"/>
+                                    <outlet property="delegate" destination="c54-Bq-fbM" id="oFi-Xe-bxX"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JHr-GW-GpV" firstAttribute="top" secondItem="4T4-Ym-nDa" secondAttribute="bottom" id="6CF-C9-2cU"/>
+                            <constraint firstItem="4T4-Ym-nDa" firstAttribute="leading" secondItem="dYg-O2-fd1" secondAttribute="leading" id="cbN-mK-VGE"/>
+                            <constraint firstAttribute="trailing" secondItem="4T4-Ym-nDa" secondAttribute="trailing" id="hlo-au-EqU"/>
+                            <constraint firstItem="4T4-Ym-nDa" firstAttribute="top" secondItem="57B-bL-pwE" secondAttribute="bottom" id="hs1-hq-yKe"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="4T4-Ym-nDa" id="Ct9-GW-JIT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c8Q-b9-RcC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1177" y="1720"/>
         </scene>
     </scenes>
     <resources>
